# todo-cli

./: Cargo.toml  README.md  todos.json
src/: cli.rs  display.rs  lib.rs  main.rs  models.rs  storage.rs
src/commands/: add.rs  clear.rs  done.rs  list.rs  mod.rs  priority.rs  remove.rs
